tests/test_assets/semantic/invalid/expressions/contextual_constant_comparison_range.expected
semantic error at line 2: integer constant operand does not fit comparison type
semantic error at line 6: integer constant operand does not fit comparison type
semantic error at line 10: integer constant operand does not fit comparison type
semantic error at line 14: integer constant operand does not fit comparison type
semantic error at line 18: integer constant operand does not fit comparison type
semantic error at line 22: integer constant operand does not fit comparison type
6 semantic errors generated.
